Aggiunti i permessi alla pagina di registrazione al sito

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
   <header>
-    <h1>Django Mysite</h1>
+    <h1>VMhotels</h1>
     <h2>Login Page</h2>
   </header>
   <section>
