--- a/portal/templates/portal/portal.html
+++ b/portal/templates/portal/portal.html
@@ -15,6 +15,7 @@ This is the main template for all portal pages.
 		<ul>
 			<li><a href="/">Main Page</a></li>
 			<li><a href="{% url 'logout_view' %}">Logout</a></li>
+			<li><a href="/portal/change">Modifica dati utente</a></li>
 		</ul>
 	</section>
 	
