Corretti Bug nella registrazione. Aggiunti controlli e correzione bug in modifica Utenti, Hotel e Stanze.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -25,7 +25,7 @@
       {% if next %}
         <input type="hidden" name="next" value="{{ next }}" />
       {% else %}
-        <input type="hidden" name="next" value="portal:portal_welcome" />
+        <input type="hidden" name="next" value="portal:change" />
       {% endif %}
       <input type="submit" value="login" />
     </form>
