--- a/hotels/templates/hotels/edithotel.html
+++ b/hotels/templates/hotels/edithotel.html
@@ -6,8 +6,8 @@
 {% bootstrap_messages %}
 
 {% block content %}
-
-<form role="form" class="form-horizontal" method="post">
+<h1>Editing Hotel {{ hotel.name }}</h1>
+<form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         {% bootstrap_form form layout="horizontal" %}
         {% buttons submit='OK' reset='Cancel' layout='horizontal' %}{% endbuttons %}
