--- a/portal/templates/portal/upload.html
+++ b/portal/templates/portal/upload.html
@@ -10,7 +10,10 @@
 <form role="form" class="form-horizontal" method="post">
         {% csrf_token %}
         {% bootstrap_form form layout="horizontal" %}
-        {% buttons submit='OK' reset='Cancel' layout='horizontal' %}{% endbuttons %}
+        <div class="col-md-4 text-center">
+        {% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
+        {% bootstrap_button "Cancel" button_type="submit" name="Cancel" button_class="btn-default" icon="remove" %}
+        </div>
 </form>
 
 {% endblock %}
