--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+{% load bootstrap3 %}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{% bootstrap_messages %}
+
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
