--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,18 @@
 	<title>VMhotels</title>
 {% endblock %}
 {% block body %}
-	<header><h1>VMhotels</h1></header>
+	<header><h1 align="center">VMhotels</h1></header>
 	<section>
-		<p>Welcome to VMhotels.<br>
+		<p align="center">Welcome to VMhotels.<br>
 		   Click <a href="{% url 'portal:portal_welcome' %}">here</a> to login.<br>
 	</section>
-	
-	<form method="get" class="navbar-form pull-right">
-		<input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder="Search hotels by city">
-		<input type="submit" class="btn" value="Search" name="search" >
-	</form>
+	<div class="container">
+    		<div class="row" align="center">
+			<form method="get" >
+				<input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder="Search hotels by city">
+				<input type="submit" class="btn-primary" value="Search" name="search" >
+			</form>
+		</div>
+	</div>
 	
 {% endblock %}
