--- a/hotels/templates/hotels/edithotel.html
+++ b/hotels/templates/hotels/edithotel.html
@@ -7,14 +7,18 @@
 
 {% block content %}
 <h1>Editing Hotel {{ hotel.name }}</h1>
+<br><br><br><br>
 <form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
         {% csrf_token %}
-        {% bootstrap_form form layout="horizontal" size="medium" %}
         
-        <div class="col-md-4 text-center">
-        {% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
-        {% bootstrap_button "Cancel" button_type="submit" name="Cancel" button_class="btn-default" icon="remove" %}
+        <div class="col-xs-10" align="center">
+        	{% bootstrap_form form layout="horizontal" size='md' %}
+        <div class="col-md-6 text-center">
+        	{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
+        	{% bootstrap_button "Cancel" button_type="submit" name="Cancel" button_class="btn-default" icon="remove" %}
         </div>
+        </div>
+        <br>
 </form>
 
 {% endblock %}
