--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,14 @@
 	<header><h1 align="center">VMhotels</h1></header>
 	<section>
 		<p align="center">Welcome to VMhotels.<br>
-		   Click <a href="{% url 'portal:portal_welcome' %}">here</a> to login.<br>
+		Click <a href="{% url 'portal:portal_welcome' %}">here</a> to login.<br>
 	</section>
 	<div class="container">
-    		<div class="row" align="center">
-			<form method="get" >
+    	<div class="row" align="center">
+			<form action="{% url 'search_results' %}" method="post">
+			{% csrf_token %}
 				<input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder="Search hotels by city">
-				<input type="submit" class="btn-primary" value="Search" name="search" >
+				<input type="submit" class="btn-primary" value="Search" name="search">
 			</form>
 		</div>
 	</div>
