--- a/templates/search.html
+++ b/templates/search.html
@@ -1,13 +1,12 @@
 {% if found_entries %}
-    <p>You searched for "{{ query_string }}".</p>
+    <p>You've searched for "{{ query_string }}".</p>
     <ul>
     {% for i in found_entries %}
-        <li><a href="{{ q.get_absolute_url }}">{{ found_entries }}</a></li>
+        <li><a href="{% url 'hotels:hotel_detail' i.pk %}">{{ i }}</a></li>
     {% endfor %}
     </ul>
 {% endif %}
 {% if query_string and not found_entries %}
     <p>No results found.</p>
-{% else %}
-    <p>Type a search query into the box above, and press "Submit" to search.</p>
+    <p><a href="{% url 'main_page' %}">Back</a></p>
 {% endif %}
