--- a/hotels/templates/hotels/edithotel.html
+++ b/hotels/templates/hotels/edithotel.html
@@ -6,19 +6,19 @@
 {% bootstrap_messages %}
 
 {% block content %}
-<h1>Editing Hotel {{ hotel.name }}</h1>
+<h1 align="center">Editing Hotel {{ hotel.name }}</h1>
 <br><br><br><br>
+<div class="col-xs-10" align="center">
 <form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         
-        <div class="col-xs-10" align="center">
         	{% bootstrap_form form layout="horizontal" size='md' %}
-        <div class="col-md-6 text-center">
+        	<div class="col-md-6 text-center">
         	{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
-        	{% bootstrap_button "Cancel" button_type="submit" name="Cancel" button_class="btn-default" icon="remove" %}
-        </div>
-        </div>
-        <br>
+        	</div>
 </form>
+<a href="{% url 'hotels:hotel_detail' hotel.pk%}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
+</div>
+<br>
 
 {% endblock %}
