--- a/portal/templates/portal/upload.html
+++ b/portal/templates/portal/upload.html
@@ -6,14 +6,17 @@
 {% bootstrap_messages %}
 
 {% block content %}
-
-<form role="form" class="form-horizontal" method="post">
+<h1 align="center">Edit Personal Data</h1>
+<br><br><br><br>
+<div class="col-xs-10" align="center">
+<form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
         {% csrf_token %}
-        {% bootstrap_form form layout="horizontal" %}
-        <div class="col-md-4 text-center">
-        {% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
-        {% bootstrap_button "Cancel" button_type="submit" name="Cancel" button_class="btn-default" icon="remove" %}
-        </div>
+        {% bootstrap_form form layout="horizontal" size='md' %}
+        	<div class="col-md-6 text-center">
+        	{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
+        	</div>
 </form>
+<a href="{% url 'portal:portal_welcome' %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
+</div>
 
 {% endblock %}
