--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% comment %}   Main page to authenticate users. {% endcomment %}
 {% block head %}
-  <title>Django Mysite | Login</title>
+  <title>VMHotels | Login</title>
 {% endblock %}
 {% block body %}
   <header>
@@ -25,7 +25,7 @@
       {% if next %}
         <input type="hidden" name="next" value="{{ next }}" />
       {% else %}
-        <input type="hidden" name="next" value="portal:change" />
+        <input type="hidden" name="next" value="{% url 'portal:personal' %}" />
       {% endif %}
       <input type="submit" value="login" />
     </form>
