--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,52 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="#" class="navbar-brand"><img class="center-block img-circle" height="33" alt="VMhotels"></a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active">
+              <a href="#">Chi Siamo</a>
+            </li>
+            <li>
+              <a href="#">Dove Siamo</a>
+            </li>
+            <li>
+              <a href="#">News</a>
+            </li>
+            <li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="badge">2</span>Catalogo</a>
+              <ul class="dropdown-menu" role="menu">
+                <li>
+                  <a href="#">•Tutti i Prodotti</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="mailto:">Contattaci</a>
+            </li>
+            <li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Lingua</a>
+              <ul class="dropdown-menu" role="menu">
+                <li>
+                  <a href="../Eng/chisiamo.html"> <img>Inglese</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="cover"><img src="/media/trav.jpg" style="width:100%; height:600px;"></div>
   {% block head %}{% endblock %}
  </head>
  <body>
