--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {% block body %}    
 	<section>
 		<p align="center">Welcome to VMhotels.<br>
-		Click <a href="{% url 'portal:login' %}">here</a> to login.<br>
+		Click <a href="{% url 'portal:django.contrib.auth.views.login' %}">here</a> to login.<br>
 	</section>
 	<div class="container">
     	<div class="row" align="center">
