--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 {% load bootstrap3 %}
 
 {% bootstrap_css %}
-{% bootstrap_javascript %}
+{% bootstrap_javascript_url %}
 
 {% bootstrap_messages %}
 
