Aggiunta Registrazione Utenti Customer. Modificate Pagine Personali Utenti. Modificato Url Reservation Aggiunto Dettaglio Reservation

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 	<section>
 		<p align="center">Welcome to VMhotels.<br>
 		Click <a href="{% url 'portal:django.contrib.auth.views.login' %}">here</a> to login.<br>
+		Click <a href="{% url 'portal:registration_register_customer' %}">here</a> to register as a costumer.<br>
+		Click <a href="{% url 'portal:registration_register_owner' %}">here</a> to register as an owner.<br>
 	</section>
 	<div class="container">
     	<div class="row" align="center">
