--- a/portal/templates/portal/personal.html
+++ b/portal/templates/portal/personal.html
@@ -8,14 +8,34 @@
 <h1 align="center">Personal Page of {{ request.user }}</h1>
 <br>
 <div align="center">
+{% if owner %}
 <h2>Hotels:</h2>
+{% if hotel_list %}
 <ul>
 {% for h in hotel_list %}
 	<li><a href="{% url 'hotels:hotel_detail' h.pk %}">{{ h.name }}</a>
 {% endfor %}
 </ul>
+{% endif %}
+{% endif %}
+{% if customer %}
+<h2>Reservations:</h2>
+{% if reservation_list %}
+<ul>
+{% for r in reservation_list %}
+	<li><a href="{% url 'reservation:reservation_detail' r.pk %}">Reservation</a>
+		Room {{ r.room.number }} Hotel {{ r.room.hotel }}</li>
+{% endfor %}
+</ul>
+{% endif %}
+{% endif %}
 <br><br>
-<a href="{% url 'portal:logout_view' %}">{% bootstrap_button "Logout" button_type="link" name="Logout" button_class="btn-default" %}</a>
+{% if owner %}
 <a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-default" %}</a>
 <a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-default" %}</a>
+{% endif %}
+{% if customer %}
+AGGIUNGERE ROBA QUI
+{% endif %}
+<a href="{% url 'portal:logout_view' %}">{% bootstrap_button "Logout" button_type="link" name="Logout" button_class="btn-default" %}</a>
 </div>
