Aggiunta l'aggiunta in coda di prenotazioni. Sistemati gli url delle review. Aggiunta pagina visualizzazione review

--- a/hotels/templates/hotels/hotel_detail.html
+++ b/hotels/templates/hotels/hotel_detail.html
@@ -14,7 +14,8 @@ Address: {{ hotel.address }}<br>
 Description: {{ hotel.description }}<br>
 Email: {{ hotel.email }}<br>
 Tel: {{ hotel.tel }}<br>
-
+View the last reviews for this hotel <a href="{% url 'review:list_review' hotel.id %}">here</a>
+<br>
 Camere:<br>
 <ul>
 {% for room in hotel.room_set.all %}
