--- a/review/templates/review/addreview.html
+++ b/review/templates/review/addreview.html
@@ -6,17 +6,9 @@
 {% bootstrap_messages %}
 
 {% block content %}
-<h1 align="center">Add comment {{ hotel.name }}</h1>
+<h1 align="center">Add Review for {{ hotel.name }}</h1>
 <br>
 <br>
-{% if rev_list %}
-<ul>
-{% for r in rev_list %}
-	<li><a href="#">{{ r.rate }}</a> {{ r.comment }}
-{% endfor %}
-</ul>
-{% endif %}
-<br><br><br><br>
 <div class="col-xs-10" align="center">
 <form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
         {% csrf_token %}
