--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,10 @@
     	<div class="row" align="center">
 			<form action="{% url 'search_results' %}" method="post">
 				{% csrf_token %}
-				<input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder="Search hotels by city">
+				<input type="text" id="searchCity" class="input-medium search-query" name="dest" placeholder="Destination">
+				<input type="number" id="searchBed" class="input-medium search-query" name="beds" placeholder="Beds">
+				<input type="date" id="checkin" class="input-medium search-query" name="checkin" placeholder="CheckIn">
+				<input type="date" id="checkout" class="input-medium search-query" name="checkout" placeholder="CheckOut">
 				<input type="submit" class="btn-primary" value="Search" name="search">
 				
 			</form>
