--- a/portal/templates/portal/portal.html
+++ b/portal/templates/portal/portal.html
@@ -8,19 +8,30 @@ This is the main template for all portal pages.
 {% endblock %}
 
 {% block body %}
-	<header>
-		<h1>VMhotels | Web Portal</h1>
-	</header>
-	<section>
-		<ul>
+    <header>
+	<h1>VMhotels | Web Portal</h1>
+    </header>
+    {% block content %}{% endblock %}	
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <br>
+            <br>
+            <br>
+            <img src="/media/info.png" class="center-block img-responsive" width="400">
+            <p></p>
+            <p></p>
+          </div>
+          <br><br><br><br><br><br>
+          <div class="col-md-6 text-center">
+            <ul>
 			<li><a href="/">Main Page</a></li>
 			<li><a href="{% url 'portal:logout_view' %}">Logout</a></li>
 			<li><a href="{% url 'portal:update_data' %}">Modifica dati utente</a></li>
-		</ul>
-	</section>
-	
-	{% block content %}{% endblock %}
-
-	<footer>
-	</footer>
+	   </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 {% endblock %}
