--- a/portal/templates/portal/upload.html
+++ b/portal/templates/portal/upload.html
@@ -1,3 +1,4 @@
+{% extends "portal/portal.html" %}
 {% load bootstrap3 %}
 
 {% bootstrap_css %}
@@ -5,7 +6,9 @@
 
 {% bootstrap_messages %}
 
-{% block content %}
+{% block cover %}
+<div class="cover" style="background-image: url(/media/quaderno.jpeg);  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
+<br><br><br><br>
 <h1 align="center">Edit Personal Data</h1>
 <br><br><br><br>
 <div class="col-xs-10" align="center">
@@ -19,4 +22,9 @@
 <a href="{% url 'portal:portal_welcome' %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
 </div>
 
+{% endblock %}
+{% block body %}
+{% endblock %}
+
+{% block footer %}
 {% endblock %}
