modifiche ai template base per gestire meglio la cover

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block bar %}
 {% endblock %}
-{% block cover %}
+{% block covercontent %}
     <table align="center">
  	 <tr>
     		<th>
