--- a/templates/base.html
+++ b/templates/base.html
@@ -47,23 +47,26 @@
     
   {% endblock %}
   
-  {% block image %}
-  {% endblock %}
+  
   
   {% block cover %}
   <div class="cover" style="background-image: url(/media/trav.jpg);  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
+  {% block covercontent %}
   {% endblock %}
   </div>
+  {% endblock %}
+  
     
  </head>
  <body>
   {% block body %}
+  {% endblock %}
+  {% block form %}
+  {% endblock %}
+  {% block footer %}
   <div class="container well">
 	<h2><center>Frase figa da effetto XD tipo SIAMO SEMPRE PRESENTI</center></h2>
   </div>
-  {% endblock %}
-  {% block form %}{% endblock %}
-  {% block footer %}
   <div class="container well">
 	<h2><center>Frase figa da effetto XD tipo SIAMO SEMPRE PRESENTI</center></h2>
   </div>
