Template /portal/personal

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="#" class="navbar-brand"><img src="/media/vm.png" class="center-block img-circle" height="33" alt="VMhotels"></a>
+          <a href="/" class="navbar-brand"><img src="/media/vm.png" class="center-block img-circle" height="33" alt="VMhotels"></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -58,15 +58,12 @@
   
     
  </head>
- <body>
+ <body onload="javascript:scrollTo(0,300)">
   {% block body %}
   {% endblock %}
   {% block form %}
   {% endblock %}
   {% block footer %}
-  <div class="container well">
-	<h2><center>Frase figa da effetto XD tipo SIAMO SEMPRE PRESENTI</center></h2>
-  </div>
   <div class="container well">
 	<h2><center>Frase figa da effetto XD tipo SIAMO SEMPRE PRESENTI</center></h2>
   </div>
