--- a/portal/templates/portal/personal.html
+++ b/portal/templates/portal/personal.html
@@ -1,10 +1,11 @@
+{% extends "portal/portal.html" %}
 {% load bootstrap3 %}
 
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
 {% bootstrap_messages %}
-
+{% block body %}
 <h1 align="center">Personal Page of {{ request.user }}</h1>
 <br>
 <div align="center">
@@ -34,11 +35,12 @@
 {% endif %}
 <br><br>
 {% if owner %}
-<a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-default" %}</a>
-<a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-default" %}</a>
+<a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-success" %}</a>
+<a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-success" %}</a>
 {% endif %}
 {% if customer %}
 AGGIUNGERE ROBA QUI
 {% endif %}
-<a href="{% url 'portal:logout_view' %}">{% bootstrap_button "Logout" button_type="link" name="Logout" button_class="btn-default" %}</a>
+<a href="{% url 'portal:logout_view' %}">{% bootstrap_button "Logout" button_type="link" name="Logout" button_class="btn-danger" %}</a>
 </div>
+{% endblock %}
