Sistemata la Ricerca

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
 					<input type="number" id="searchBed" class="input-medium search-query" name="beds" placeholder="Beds">
 					<input type="date" id="checkin" class="input-medium search-query" name="checkin" placeholder="CheckIn">
 					<input type="date" id="checkout" class="input-medium search-query" name="checkout" placeholder="CheckOut">
+					Order by Rate: <input type="checkbox" id="rate" class="input-medium search_query" name="rate">
 					<input type="submit" class="btn-primary" value="Search" name="search">
 				</form>
 			</div>
