--- a/templates/search.html
+++ b/templates/search.html
@@ -1,18 +1,15 @@
+{% load mytags %}
 <h2>Hotels Found:</h2>
     {% for h in found_entries %}
         <img src="{{ h.image.url }}" alt="Hotel View" style="width:100px;height:100px;">
-        Hotel: <a href="{% url 'hotels:hotel_detail' h.pk %}">{{ h.name }}</a>
+        Hotel: <a href="{% url 'hotels:hotel_detail' h.pk %}">{{ h.name }}</a><br>
         {% if 'rate' in request.POST %}
         	Average Vote: {{ h.average }}<br>
-        {% else %}
-        	{% widthratio h.room.cost 1 days as total_cost %}
-        	Average Cost: {{ total_cost }}<br>
         {% endif %}
-        {% for r in rl %}
-        	{% if r.hotel = h %}
-        		Camera: {{ r.number }}, Cost: {{ r.cost }}<br>
-        	{% endif %}
-        {% endfor %}
+        {% widthratio rl|get_value_from_dict:h|get_value_from_dict:'costmin' 1 days as min_cost %}
+        {% widthratio rl|get_value_from_dict:h|get_value_from_dict:'costmax' 1 days as max_cost %}
+        Min Price for {{ days }} nights: {{ min_cost }} <br>
+        Max Price for {{ days }} nights: {{ max_cost }}<br>
     {% empty %}
     	No Results Found.
     {% endfor %}
