Ora la login è ok

--- a/portal/templates/registration/login.html
+++ b/portal/templates/registration/login.html
@@ -6,7 +6,7 @@
 {% block bar %}
 {% endblock %}
 
-{% block cover %}
+{% block covercontent %}
 	 <table align="center">
  	 <tr>
     		<th>	<br><br><br><br>
