--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
 {% endblock %}
 {% block bar %}
 {% endblock %}
+
+{% block cover %}
+ <div class="cover" style="background-image: url(/media/login.jpg);  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
 {% block covercontent %}
     <table align="center">
  	 <tr>
@@ -50,6 +53,7 @@
 		</th>
 	</tr>
     </table>	
+{% endblock %}
 {% endblock %}
 {% block footer %}
 {% endblock %}
