--- a/hotels/templates/hotels/editroom.html
+++ b/hotels/templates/hotels/editroom.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 {% load bootstrap3 %}
 
 {% bootstrap_css %}
@@ -5,21 +6,24 @@
 
 {% bootstrap_messages %}
 
-{% block content %}
-<h1 align="center">Hotel {{ hotel.name }} | Editing Room {{ room.number }}</h1>
+
+{% block covercontent %}
 <br><br><br><br>
-<div class="col-xs-10" align="center">
-<form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
-        {% csrf_token %}
+		<h1 align="center">Hotel {{ hotel.name }} | Editing Room {{ room.number }}</h1>
+		<br><br><br><br>
+		<div class="col-xs-10" align="center">
+		<form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
+        		{% csrf_token %}
         
-        	{% bootstrap_form form layout="horizontal" size='md' %}
-        	<div class="col-md-6 text-center">
-        	{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
-        	</div>
-</form>
-<a href="{% url 'hotels:room_detail' hotel.pk room.pk %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
-</div>
-<br>
+        		{% bootstrap_form form layout="horizontal" size='md' %}
+        		<div class="col-md-6 text-center">
+        			{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
+        		</div>
+		</form>
+		<a href="{% url 'hotels:room_detail' hotel.pk room.pk %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
+		</div>
 
+{% endblock %}
 
+{% block footer %}
 {% endblock %}
