--- a/hotels/templates/hotels/edithotel.html
+++ b/hotels/templates/hotels/edithotel.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 {% load bootstrap3 %}
 
 {% bootstrap_css %}
@@ -5,7 +6,8 @@
 
 {% bootstrap_messages %}
 
-{% block content %}
+{% block covercontent %}
+<br><br><br><br>
 <h1 align="center">Editing Hotel {{ hotel.name }}</h1>
 <br><br><br><br>
 <div class="col-xs-10" align="center">
@@ -21,4 +23,6 @@
 </div>
 <br>
 
+{% endblock %}
+{% block footer %}
 {% endblock %}
