--- a/hotels/templates/hotels/inserthotel.html
+++ b/hotels/templates/hotels/inserthotel.html
@@ -1,5 +1,17 @@
-<form enctype="multipart/form-data" method="post">
+{% extends "base.html" %}
+{% load bootstrap3 %}
+
+{% block covercontent %}
+<br><br><br><br><br>
+<h1 align="center">Insert Hotel data</h1>
+<br><br>
+<div class="col-xs-10" align="center">
+<form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
 {% csrf_token %}
-{{ form.as_p }}
+{% bootstrap_form form layout="horizontal" size='md' %}
 <input type="submit" value="Create"/>
 </form>
+</div>
+{% endblock %}
+{% block footer %}
+{% endblock %}
