--- a/reservation/templates/reservation/reservation_detail.html
+++ b/reservation/templates/reservation/reservation_detail.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+{% load bootstrap3 %}
+
+{% block body %}
 <header>
 <h1>Reservation for 
 <a href="{% url 'hotels:room_detail' reservation.room.hotel.id reservation.room.id %}">Room {{ reservation.room.number }}</a>
@@ -9,6 +13,7 @@
 {% endif %}
 
 <br>
+<p align="center">
 First Name: {{ reservation.firstname }}<br>
 Last Name: {{ reservation.lastname }}<br>
 City: {{ reservation.city }}<br>
@@ -21,6 +26,7 @@ Created On: {{ reservation.created }}<br>
 Last Update: {{ reservation.updated }}<br>
 In Queue: {% if reservation.is_active %} No {% else %} Yes {% endif %}
 <br>
-Edit <a href="{% url 'reservation:edit_reservation' reservation.pk %}">here</a>
-<br>
-Delete <a href="{% url 'reservation:delete_reservation' reservation.pk %}">here</a>
+<a href="{% url 'reservation:edit_reservation' reservation.pk %}"><button type="button" class="btn btn-success">Edit</button></a>
+<a href="{% url 'reservation:delete_reservation' reservation.pk %}"><button type="button" class="btn btn-danger">Delete</button></a>
+</p>
+{% endblock %}
