--- a/review/templates/review/addreview.html
+++ b/review/templates/review/addreview.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 {% load bootstrap3 %}
 
 {% bootstrap_css %}
@@ -5,10 +6,10 @@
 
 {% bootstrap_messages %}
 
-{% block content %}
+{% block covercontent %}
+<br><br><br><br><br>
 <h1 align="center">Add Review for {{ hotel.name }}</h1>
-<br>
-<br>
+<br><br><br>
 <div class="col-xs-10" align="center">
 <form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
         {% csrf_token %}
@@ -22,4 +23,6 @@
 </div>
 <br>
 
+{% endblock %}
+{% block footer %}
 {% endblock %}
